--- a/app/views/book/tip.erb
+++ b/app/views/book/tip.erb
@@ -25,7 +25,7 @@
       <div class="caption">
       <center>
         <h3 id="menu_font">조혜진</h3>
-        <p  id="menu_font" style="font-size: 18px;">평택대학교<br>정보통신학과 123456789</p>
+        <p  id="menu_font" style="font-size: 18px;">평택대학교<br>정보통신학과 2012351039</p>
         <!--<p><a href="#" class="btn btn-primary" role="button">SNS</a> <a href="#" class="btn btn-default" role="button">Email</a></p>-->
       </center>
       </div>
@@ -73,7 +73,7 @@
   
     <div class="col-md-4">
     <div class="thumbnail"> 
-      <img src="http://khu-p-chohyejin.c9.io/make/박상철.jpg" width = "242px" height = "200px" alt="...">
+      <img src="http://khu-p-chohyejin.c9.io/img/san.jpg" width = "242px" height = "200px" alt="...">
       <div class="caption">
       <center>
         <h3 id="menu_font">박상철</h3>
@@ -83,12 +83,7 @@
       </div>
     </div>
   </div>
-  
 
- 
-  
-  
- 
 </div>
 </div>
 <br><br>
