--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,20 +1,25 @@
 <div id="menu_font" style="font-size: 20px;margin-top: 10px;">
   <%- if controller_name != 'sessions' %>
-   이미 회원가입하셨나요? ^_^&nbsp;&nbsp;&nbsp;
-   <%= link_to "로그인", new_session_path(resource_name) %><br /><br>
+   <%= button_to "로그인", new_session_path(resource_name), :class => "btn btn-default btn-lg btn-block", :method => :get  %>
+   <!--%= link_to "로그인", new_session_path(resource_name) %><br /><br>-->
   <% end -%>
 </div>
 
 <div id="menu_font" style="font-size: 20px;margin-top: 10px;">
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "비밀번호 찾기", new_password_path(resource_name) %><br /><br>
+
+  <%= button_to "비밀번호 찾기", new_password_path(resource_name), :class => "btn btn-default btn-lg btn-block", :method => :get  %>
+  <!--%= link_to "비밀번호 찾기", new_password_path(resource_name) %><br /><br>-->
+
 <% end -%>
 </div>
 
-<div id="menu_font" style="font-size: 20px">
+<div id="menu_font" style="font-size: 20px;margin-top: 10px;">
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-   아직 회원이 아니신가요? ^_^&nbsp;&nbsp;&nbsp;
-   <%= link_to "회원가입", new_registration_path(resource_name) %><br /><br>
+
+  <%= button_to "회원가입", new_registration_path(resource_name), :class => "btn btn-default btn-lg btn-block", :method => :get  %><br>
+
+   <!--%= link_to "회원가입", new_registration_path(resource_name) %><br /><br>-->
 <% end -%>
 </div>
 
