--- a/app/views/message/read.erb
+++ b/app/views/message/read.erb
@@ -28,7 +28,7 @@
   <pre id="menu_font_t" style="font-size: 18px;"><%=@message.content%></pre><br>
   
     
-  <a href="/message/main" class="btn btn-primary btn-sm" style="font-size: 18px;" id="menu_font">메인으로 가기</a>
+  <a href="/book/mypage" class="btn btn-primary btn-sm" style="font-size: 18px;" id="menu_font">마이페이지로 가기</a>
     <% if @message.receiver==current_user.id%>
       <a href="/message/write" class="btn btn-primary btn-sm" style="font-size: 18px;" id="menu_font">답장보내기</a>
     <%end%>
