--- a/app/views/message/reply.erb
+++ b/app/views/message/reply.erb
@@ -38,7 +38,7 @@
      
       <div class="form-group">
         <div class="col-lg-10 col-lg-offset-2">
-          <a href="/message/main" class="btn btn-default" style="text-align: center; font-size: 18px;" id="menu_font">Cancel</a>
+          <a href="/book/mypage" class="btn btn-default" style="text-align: center; font-size: 18px;" id="menu_font">Cancel</a>
          <!--<button type="reset" class="btn btn-default"  style="font-size: 18px" id="menu_font">Cancel</button>-->
          <button type="submit" class="btn btn-primary"  style="font-size: 18px" id="menu_font">쪽지 보내기</button>
         </div>
