--- a/app/assets/stylesheets/book.scss
+++ b/app/assets/stylesheets/book.scss
@@ -79,7 +79,7 @@
     width: 20%;
     height: 2px;
     background: #FF0000;
-    bottom: 130px;
+    bottom: 140px;
     left: 40%;
 }
 .red-border-bottom-center:before {
@@ -137,17 +137,17 @@
 
 //밑부분 사진 투명도
 .jumbotron_down {
-    opacity: 0.7;
+    // opacity: 0.7;
 }
 
 //My Zone Font
 #main_font {
-  font: 400 155px/1.5 'Pacifico', Helvetica, sans-serif;
+  font: 20 155px/1.5 'Pacifico', Helvetica, sans-serif;
   color: white;
   text-shadow: 5px 4px 0px rgba(0, 0, 0, 0.8), 7px 7px 7px rgba(0, 0, 0, 0.5);
 }
 #main_font_ {
-  font: 400 20px/1.5 'Pacifico', Helvetica, sans-serif;
+  font: 20 20px/1.5 'Pacifico', Helvetica, sans-serif;
   color: white;
   text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.2), 7px 7px 7px rgba(0, 0, 0, 0.05);
 }
@@ -174,11 +174,16 @@
     background: url(http://www.cdglabs.org/sketchpad14/blog/img/1.png) repeat-x center;
 }
 
-
-
-// .aaa{
-//             overflow:auto;
-//             -webkit-overflow-scrolling: touch;
-//             position:relative;
-//         }
-
+.icon_ { 
+    // position: auto;
+    top: 100px;
+    left: 100px;
+    width: 400px;
+    height: 200px;
+    // padding: 50px 0px;
+    // border: 1px solid black;
+    // background-color: black;
+    // text-align: center;
+    // color: black;
+    // opacity: 0.6;
+}
