--- a/app/views/book/main.erb
+++ b/app/views/book/main.erb
@@ -1,132 +1,111 @@
-<div class="well" id="menu_font" style="font-size: 20px;" >
-  <center>오늘의 예약 건수 : <span class="badge"><%=Reservation.where(date: Time.zone.today).count%></span>
-  <!--<script src="http://www.clocklink.com/embed.js"></script> <script type="text/javascript" language="JavaScript">obj=new Object;obj.clockfile="5031-blue.swf";obj.TimeZone="Afghanistan_Kabul"; obj.width=145;obj.height=50;obj.wmode="transparent";showClock(obj);</script>-->
-    <!--<iframe src="http://free.timeanddate.com/clock/i4utl4d3/n235/tlkr47/fs18/th2/ts1" frameborder="0" width="89" height="27"></iframe>-->
-<script type="text/javascript">
-function GetClock(){
-var d=new Date();
-var nhour=d.getHours(),nmin=d.getMinutes(),nsec=d.getSeconds(),ap;
 
-if(nhour==0){ap=" AM";nhour=12;}
-else if(nhour<12){ap=" AM";}
-else if(nhour==12){ap=" PM";}
-else if(nhour>12){ap=" PM";nhour-=12;}
-
-if(nmin<=9) nmin="0"+nmin;
-if(nsec<=9) nsec="0"+nsec;
-
-document.getElementById('clockbox').innerHTML=""+nhour+":"+nmin+":"+nsec+ap+"";
-}
-
-window.onload=function(){
-GetClock();
-setInterval(GetClock,1000);
-}
-</script>
-
-
-    <br><%=Time.zone.today%> <p id="clockbox"></p>
-    <br><br>* 예약할 강의실을 선택해주세요.<br>
-  </center>
-</div>
-
-<br>
-
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-6">
-    <img src="http://khu-p-chohyejin.c9.io/make/박상철.jpg">
-      <!--<center>-->
-      <!--<img src="http://www.ptu.ac.kr/ptu/include/img/contents/campus_map/campus_map_s.jpg">-->
-      <!--</center>-->
-    </div>
-    
-    <div class="col-md-6">
-    <div class="col-md-9">
-        <table class="table table-bordered">    
-          <tbody >
-              <tr >
-                <td class="active"  style="text-align:center">대학원동</td>
-                <td class="active"  style="text-align:center">예술탑</td>
-                <td class="active"  style="text-align:center">대학원동</td>
-              </tr>
-              <tr >
-                <td class="active"  style="text-align:center">대학원동</td>
-                <td class="active"  style="text-align:center">예술탑</td>
-                <td class="active"  style="text-align:center">예술탑</td>
-              </tr>
-              <tr >
-                <td class="active"  style="text-align:center">대학원동</td>
-                <td class="active"  style="text-align:center">예술탑</td>
-                <td class="active"  style="text-align:center">대학원동</td>
-              </tr>
-            </tbody>  
-        </table>
-        </div>
-      </div>
+<div style="background-color:lightgray; padding-top:150px;padding-bottom:150px" id="menu_font">
   
-    <div class="col-md-5">          
-      <% @building.each do |b| %>
-      
-      <a href="/book/detail_info/<%=b.id%>" class="btn btn-success" style="margin-bottom:10px; text-align: center; font-size: 18px;" id="menu_font"><%=b.name%></a><br>
-      
-      <%end%>   
-            
-    </div>
-
-  </div>
-</div>
-
-<br><br><br><br><br>
-
-
-
-<!--<div class="col-md-6">-->
-<!--    <div class="panel panel-info">-->
-<!--      <div class="panel-heading">-->
-<!--        <h3 class="panel-title"><center>공지사항</center></h3>-->
-<!--      </div>-->
-<!--      <div class="panel-body">-->
-<!--        --- 이 페이지에 필요한것----<br>-->
-<!--        [1]행사정보나 뭐 그런걸 알려주는 달력<br>-->
-<!--        [2]공지사항을 알려주는 기능이 있어야함 [관리자들이 쓸수있게끔!]<br>-->
-<!--        [3]예약할 건물을 선택해 주세요 (본관, 이공관) ->버튼으로 구현<br> ->detail_info.erb 로 이동(본관 선택시 본관에 대한 강의실 출력)<br>-->
-<!--        [4]어플리케이션.이알비 ->홈페이지 기본틀 제공할 것! (상단바에 페이지 이동, 로그인폼 등등)<br>-->
-        
-<!--        <br>-->
-<!--        해결한 문제<br>-->
-<!--        [no] 기준시간을 한국시간으로 변경할 것 ->Timezone변경시 dateTime이 모두 nil 처리가 되므로 offset기능 사용할것!!!!!!!!!(수정 필요!)<br>-->
-<!--        [ok] 달력 >< <br>-->
-<!--        해결해야할 것 <br>-->
-        
-<!--        [2] 달력클릭시 해당 날짜에 입력된 예약현황 카운트해서 표시 <br>-->
-<!--        [3] 예약신청서 작성시 관리자에게 승인을 받게끔 해야할것  <br>-->
-<!--        [4] 대학원동 클릭시 호수가 층별로 나눠지게 보여지게함<br>-->
-<!--        -------------<br>-->
-<!--        [1]디자인 시작하기!(대충 컨셉이나 포인트 색이나 지정해서 디자인 할것 )<br>-->
-<!--        [2]적어도 9월 첫주까지는 대충 완성 시켜놓고 피드백받아서 고치기<br>-->
-<!--        [3]로그인!!!!!!!!!!!왜 보조강의 안올려줄까요<br>-->
-<!--        [4]타임테이블을 이용하여 그날의 빌리는 시간을 보기좋게 하기<br>-->
-<!--        [5]예약시간 중복 안되도록 하기<br>-->
-<!--        [6]로그인시 스튜던트 네임으로 나오기 하기 ex)박지연 님이 접속하셨습니다 <br>-->
-        
-<!--      </div>-->
-<!--    </div>-->
+  <div class="row">
     
-<!--     <div class="panel panel-info">-->
-<!--      <div class="panel-heading">-->
-<!--        <h3 class="panel-title"><center>달력</center></h3>-->
-<!--      </div>-->
-<!--      <div class="panel-body">-->
-<!--        <center>-->
-<!--          <div id="datepicker"></div>-->
-<!--            <script>-->
-            <!--// $( "#datepicker" ).datepicker();-->
-<!--            var date = $('#datepicker').datepicker({ dateFormat: 'yy-mm-dd' });-->
-<!--            </script>-->
-<!--        </center>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--</div>-->
+    <div class="col-md-2 col-md-xs-2"></div>
+      
+      <div class="col-md-8 col-md-xs-8" align="center">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            
+            <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="http://www.hindiquotes.co.in/wp-content/uploads/2015/09/54cbd8653d000.jpg" alt="Smiley" width="32" height="32">
+            
+            <h2>R E S E R V A T I O N</h2> 
+            <hr>
+            
+            <% @building.each do |b| %>
+            
+              <a href="/book/detail_info/<%=b.id%>"  id="menu_font">
+                <div class="col-md-4 col-sm-6" id="<%=b.en_name%>">
+                  <div class="thumbnail">
+                    <!--<div class="icon_">-->
+                  <!--<div style="background:#98bf21; height:100px; width:100px; position:absolute;" >-->
+                    <img src="<%=b.img%>" alt="..." class="img-responsive">
+                  <!--</div>-->
+                    <!--</div>-->
+                    <div class="caption">
+                      <h4><%=b.name%> <br><small>(<%=b.en_name%>)</small></h4>
+                      
+                    </div>
+                  </div>
+                </div>
+              </a>
+            <%end%>
+            
+            
+          </div><!--<div class="panel-body">-->
+        </div><!--<div class="panel panel-default">-->
+      </div><!--<div class="col-md-8 col-md-xs-8">-->
+      
+    <div class="col-md-2 col-md-xs-2" id="#side">
+       <%= render "book/side" %>
+    </div>
+    
+  </div><!--div class row-->
+</div><!--<div style="background-color:lightgray">-->
 
+
+
+
+
+
+
+
+<!--혜선-->
+<!--//   $(function() {-->
+            
+<!--//           $("#icon").mouseover(function(){    -->
+<!--//           $(".building-service").css("border-color", "#0C5838");-->
+<!--//           });-->
+          
+<!--//           $("#icon").mouseleave(function(){    -->
+<!--//           $(".building-service").css("border-color", "#7D6F81");-->
+<!--//           });                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                -->
+
+<!--//   });-->
+
+<!--<script> -->
+<!--    $(document).ready(function(){-->
+<!--        $("#icon").mouseover(function(){-->
+<!--            $(".icon_").animate({-->
+<!--                height: 'toggle'-->
+<!--            });-->
+<!--        });-->
+<!--    });-->
+<!--</script> -->
+
+
+
+            <script>
+              function bigImg(x) {
+                  x.style.height = "64px";
+                  x.style.width = "64px";
+              }
+              
+              function normalImg(x) {
+                  x.style.height = "32px";
+                  x.style.width = "32px";
+              }
+            </script>
+            
+
+
+
+
+
+
+
+
+            
+              <!--<script>-->
+              
+              <!--$("#<%#=b.en_name%>").mouseover(function(){-->
+              <!--  $("#hi").show(500);-->
+              <!--}-->
+              
+              <!--// $("#%=b.en_name%>").mouseover(function(){    -->
+              <!--//     $("#%=b.en_name%>").style("background-color", "#0C5838");-->
+              <!--//     });-->
+              <!--</script>-->
+                          
