--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,66 +1,94 @@
-<div class="well" id="menu_font" style="font-size: 20px;" >
-   <center>회원가입 페이지입니다.<br>
-   이름은 실명을 사용해주시고 학과나 학번을 올바르게 기입해주시기 바랍니다.<br>
-   (잘못 입력하신 사항은 '회원정보 수정' 메뉴에서 수정이 가능합니다.)</center>
+
+<div class="row" style="background:url(http://www.mrwallpaper.com/wallpapers/gradient-background.jpg); padding-top:50px; padding-bottom:40px">
+  <div class="col-md-4"></div>
+  <div class="col-md-4" id="menu_font">
+    <div class="panel panel-default" style="margin-right:50px;margin-left:50px">
+      <div class="panel-body">
+        <p align="center" style="font-size:30px; margin-bottom:30px; margin-top:10px" id = "menu_font">JOIN TO MY_ZONE !</p>
+        <div class="jumbotron">
+          <div id = "menu_font" style="padding-right:20px; padding-left:20px">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      
+        <%= devise_error_messages! %>
+        
+        <div class="input-group" style = "font-size:20px">
+          <span class="input-group-addon" id="basic-addon1">성함</span>
+          <%= f.text_field :student_name, autofocus: true, :class => "form-control", :placeholder => "필수", required: true%>
+        </div>
+        
+        <br>
+        
+        <div class="input-group" style = "font-size:20px">
+          <span class="input-group-addon" id="basic-addon1">학과</span>
+          <%= f.select :department, options_for_select(%w[신학과 국어국문학과 도시및부동산개발학과 행정학과 사회복지학과 아동청소년복지학과 재활복지학과 다문화가족복지연공(연계전공) 경영학과 무역/물류학과 광고홍보학과 미국학과 중국학과 일본학과 컴퓨터학과 정보통신학과 데이터정보학과 음악학과 실용음악학과 방송연예학과 시각디자인학과 영상디자인학과 패션디자인및 브랜딩학과 간호학과 환경융합시스템학과 교양학부 외부사용자]), {}, { :class => 'form-control',required: true } %>
+        </div>
+          
+        <br>
+        
+        <div class="input-group" style = "font-size:20px">
+          <span class="input-group-addon" id="basic-addon1">학번</span>
+          <%= f.text_field :student_number, autofocus: true, :class => "form-control", required: true, :placeholder => "필수"%>
+        </div>
+        
+        <br>
+        
+        <div class="input-group" style = "font-size:20px">
+          <span class="input-group-addon" id="basic-addon1">이메일</span>
+          <%= f.email_field :email, autofocus: true, :class => "form-control", required: true, :placeholder => "필수"%>
+        </div>
+          
+        <br>
+        
+        <div class="input-group" style = "font-size:20px">
+          <span class="input-group-addon" id="basic-addon1">비밀번호</span>
+          <%= f.password_field :password, autocomplete: "off", autofocus: true, :class => "form-control", required: true, :placeholder => "최소 8자리 이상"%>
+        </div>
+        
+        <br>
+        
+        <div class="input-group" style = "font-size:20px">
+          <span class="input-group-addon" id="basic-addon1">비밀번호확인</span>
+          <%= f.password_field :password_confirmation, autocomplete: "off", autofocus: true, :class => "form-control", required: true, :placeholder => "최소 8자리 이상"%>
+        </div>
+        
+        
+        <br>
+        
+        <div class="actions" id = "menu_font" style = "font-size:25px">
+          <input type="submit" name="commit" class="btn btn-info btn-lg btn-block" value="회원가입">
+         <%#= f.submit "로그인" %> 
+        </div>
+        
+        <% end %>
+      
+      <%= render "devise/shared/links" %>
+        </div><!--jumbotron-->
+      </div><!--panel body-->
+    </div><!--panel panel-default-->
+  </div><!--<div class="col-md-4" id="menu_font">-->
+  <div class="col-md-4"></div>
 </div>
-<br>
-
-<center>
-<div id = "menu_font" style="font-size: 30px;">
-  <span class="glyphicon glyphicon-pencil" style="color:red" aria-hidden="true"></span>&nbsp;회원가입
-</div> 
-<br><br>
 
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-  <div class="field" id = "menu_font_t" style = "font-size:20px">
-    <%= f.label :student_name,"이름" %><br />
-    <%= f.text_field :student_name, autofocus: true %>
-  </div>
-  <br>
-  
-  <div class="field" id = "menu_font_t" style = "font-size:20px">
-    <%= f.label :department,"학과" %><br />
-    <!--<2%= f.text_field :department, autofocus: true %>-->
-    <%= f.select :department, options_for_select(%w[신학과 국어국문학과 도시및부동산개발학과 행정학과 사회복지학과 아동청소년복지학과 재활복지학과 다문화가족복지연공(연계전공) 경영학과 무역/물류학과 광고홍보학과 미국학과 중국학과 일본학과 컴퓨터학과 정보통신학과 데이터정보학과 음악학과 실용음악학과 방송연예학과 시각디자인학과 영상디자인학과 패션디자인및 브랜딩학과 간호학과 환경융합시스템학과 교양학부 외부사용자]) %>
-  </div>
-  <br>
-  
-  <div class="field" id = "menu_font_t" style = "font-size:20px">
-    <%= f.label :student_number, "학번" %><br />
-    <%= f.text_field :student_number, autofocus: true %>
-  </div>
-  <br>
-  
-  <div class="field" id = "menu_font_t" style = "font-size:20px">
-    <%= f.label :email,"이메일" %><br>
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-  <br>
-  
-  <div class="field" id = "menu_font_t" style = "font-size:20px">
-    <%= f.label :password,"비밀번호" %>
-    <span style="font-size:16px">
-    <% if @minimum_password_length %>
-    (최소 <%= @minimum_password_length %> 자리 이상)
-    </span>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-  <br>
+      
+        <!--% if @minimum_password_length %>-->
+        <!--(최소 %= @minimum_password_length %> 자리 이상)-->
+        <!--</span>-->
+        <!--% end %><br />-->
+        <!--%= f.password_field :password, autocomplete: "off" %>-->
+      
+    
+      
+    
 
-  <div class="field" id = "menu_font_t" style = "font-size:20px">
-    <%= f.label :password_confirmation,"비밀번호 확인" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-  <br><br>
-  
-  <div class="actions" id = "menu_font" style = "font-size:25px">
-    <input type="submit" name="commit" value="회원가입" style="height: 40px; width: 300px; background-color: #FFFFFF;">
-    <%#= f.submit "회원가입" %>
-  </div>
-<% end %>
 
-<%= render "devise/shared/links" %><br>
-</center>
+
+
+
+
+
+
+
+
+
+
