--- a/app/views/freeboard/modify.erb
+++ b/app/views/freeboard/modify.erb
@@ -1,32 +1,128 @@
-<div class="well" id="menu_font" style="font-size: 20px;" >
-  <center>관리자는 수정사항을 작성한 후 아래의 수정하기 버튼을 눌러 게시하세요.<br>
-</div>
-<br>
 
-<center>
-
-     <p id="menu_font" style="font-size: 30px;"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;게시글 수정</p><br><%= form_tag("/freeboard/update", method: "post") do %>
-        <div style="text-align: center; font-size: 20px;" id="menu_font"><br>이름 </div>
-        <div style="padding-top:1px; padding-bottom:1px; background:rgba(80,80,80,0.15); align:center; width: 700px; font-size: 18px;" id="menu_font_t">
-              <br><div tpye= "text" name = "md_name"><%= User.find(@one_fb.fb_user_id).student_name %></div><br>
-        </div>
+<div style="background-color:lightgray; padding-top:150px;padding-bottom:150px" id="menu_font">
+  
+  <div class="row">
+    
+    <div class="col-md-2 col-md-xs-2"></div>
       
-     <div style="text-align: center; font-size: 20px;" id="menu_font"> <br>제목 </div>
-        <input type="text" name="md_title" placeholder="Title"  style="font-size: 18px; height: 40px;" id="menu_font_t" value = "<%= @one_fb.fb_title %>">
-    <br>
-     <div style="text-align: center; font-size: 20px;" id="menu_font"> <br>내용 </div>
-        <textarea type="text" name="md_content" placeholder="Content" rows="20" cols="70"   style="font-size: 18px;" id="menu_font_t"><%= @one_fb.fb_content %></textarea>
-    <br><br><br> 
+      <div class="col-md-8 col-md-xs-8" align="center">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            
+            <h2>E D I T  N O T I C E</h2>
+            <hr>
+            
+            <%= form_tag("/freeboard/update", method: "post") do %>
+              <div class="col-md-2 col-sm-1"></div>
+            
+              <div class="col-md-8 col-sm-10">
+                
+                <div class="input-group">
+                  <span class="input-group-addon" id="basic-addon1">제목</span>
+                  <input type="text" name="md_title" class="form-control"  name="user_title" value = "<%= @one_fb.fb_title %>"  required>
+                </div>
+                
+                <br>
+                
+                <div class="input-group">
+                  <span class="input-group-addon" id="basic-addon1">내용</span>
+                  <textarea type="text" name="md_content" class="form-control" rows="20" cols="70"  required><%= @one_fb.fb_content %></textarea>
+                </div>
+                
+                <br>
+                <input type='hidden' name='id' value='<%= @id %>'>
+                <input class="btn btn-info btn-lg btn-block" type ="submit" value = "수정완료"></input>
+                <br><br>
+              </div>
+              
+              <div class="col-md-2 col-sm-1"></div>
+            <%end%>
+            
+          </div><!--<div class="panel-body">-->
+        </div><!--<div class="panel panel-default">-->
+      </div><!--<div class="col-md-8 col-md-xs-8">-->
+      
+    <div class="col-md-2 col-md-xs-2" id="menu_font">
+      
+      <div class="alert alert-danger alert-dismissible" role="alert" style="margin-right:30px">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+         혹시 조건에 맞는 강의실을 찾고싶으세요?<br><br>
+         <a href="/book/searching?searching_scale=0&searching_building=선택안함"><button type="button" class="btn btn-default">강의실 검색 바로가기</button></a>
+      </div>
+      
+    </div>
+    
+     <br> <br> <br>
+
+  </div><!--div class row-->
+</div><!--<div style="background-color:lightgray">-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<div class="well" id="menu_font" style="font-size: 20px;" >-->
+<!--  <center>관리자는 수정사항을 작성한 후 아래의 수정하기 버튼을 눌러 게시하세요.<br>-->
+<!--</div>-->
+<!--<br>-->
+
+<!--<center>-->
+
+<!--     <p id="menu_font" style="font-size: 30px;"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;게시글 수정</p><br>%= form_tag("/freeboard/update", method: "post") do %>-->
+<!--        <div style="text-align: center; font-size: 20px;" id="menu_font"><br>이름 </div>-->
+<!--        <div style="padding-top:1px; padding-bottom:1px; background:rgba(80,80,80,0.15); align:center; width: 700px; font-size: 18px;" id="menu_font_t">-->
+<!--              <br><div tpye= "text" name = "md_name">%= User.find(@one_fb.fb_user_id).student_name %></div><br>-->
+<!--        </div>-->
+      
+<!--     <div style="text-align: center; font-size: 20px;" id="menu_font"> <br>제목 </div>-->
+<!--        <input type="text" name="md_title" placeholder="Title"  style="font-size: 18px; height: 40px;" id="menu_font_t" value = "%= @one_fb.fb_title %>">-->
+<!--    <br>-->
+<!--     <div style="text-align: center; font-size: 20px;" id="menu_font"> <br>내용 </div>-->
+<!--        <textarea type="text" name="md_content" placeholder="Content" rows="20" cols="70"   style="font-size: 18px;" id="menu_font_t">%= @one_fb.fb_content %></textarea>-->
+<!--    <br><br><br> -->
         <!--<div style="text-align: center; font-size: 18px;" id="menu_font">-->
         <!--    * 수정을 위한 비밀번호를 입력해주세요.<br>-->
         <!--    (수정 및 삭제시 사용됩니다)<br>-->
         <!--</div>-->
         <!--<input type="password" name="md_passowrd" placeholder="Password" style="font-size: 15px; height: 30px;" id="menu_font_t">&nbsp;-->
-        <input class="btn btn-primary btn-sm" type ="submit" style="font-size: 18px;" id="menu_font" id = "writeadmin" value = "수정하기"></input> <br> <br> <br>
-        <input type='hidden' name='id' value='<%= @id %>'>
-    <br><br>
+<!--        <input class="btn btn-primary btn-sm" type ="submit" style="font-size: 18px;" id="menu_font" id = "writeadmin" value = "수정하기"></input> <br> <br> <br>-->
+<!--        <input type='hidden' name='id' value='%= @id %>'>-->
+<!--    <br><br>-->
     
-<% end %>
+<!--<#% end %>-->
 
-</center>
-<br><br><br><br><br>
+<!--</center>-->
+<!--<br><br><br><br><br>-->
